--- a/ThinkLfyCSS.css
+++ b/ThinkLfyCSS.css
@@ -6,7 +6,7 @@ div.CenText{
 div.row1row2box{
   height:200px;
   padding:10px;
-  margin:0;
+  margin:3px;
   border: 5px;
   background-color: #00BFFF;
 }
