--- a/ThinkLfyCSS.css
+++ b/ThinkLfyCSS.css
@@ -7,6 +7,8 @@ div.row1row2box{
   height:100px;
   padding:10px;
   margin:3px;
+  margin-left: auto;
+  margin-right: auto;
   border: 5px;
   background-color: #00BFFF;
 }
