--- a/ThinkLfyCSS.css
+++ b/ThinkLfyCSS.css
@@ -1,14 +1,13 @@
 
 div.CenText{
-  text-align: center;
+  align-items: center;
 }
 
 div.row1row2box{
   height:100px;
   padding:10px;
   margin:3px;
-  margin-left: auto;
-  margin-right: auto;
+
   border: 5px;
   background-color: #00BFFF;
 }
