--- a/ThinkLfyCSS.css
+++ b/ThinkLfyCSS.css
@@ -4,11 +4,15 @@ div.CenText{
   vertical-align: middle;
 }
 
+div.row3{
+  background-color: #DAA520;
+}
+
 div.row1row2box{
   height:100px;
   padding:10px;
   margin:3px;
 
   border: 5px;
-  background-color: #00BFFF;
+  background-color:#DAA520;
 }
